-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 15.0.1
-
None
-
633e72f84 (16.0)
When using a single NDK and not having any defaults set:

Starting a debugger could result in error messages that are hard to understand:
/nativeloader: Load libjdwp.so using system ns (caller=<unknown>): ok I/System.out: Debugger has connected I/System.out: waiting for debugger to settle... I/System.out: waiting for debugger to settle... 16:29:39: Cannot find C++ debug server in NDK installation. The lldb-server binary has not been found. 16:29:39: Android target "org.qtproject.grpc.chat" died.
The lldb-server could not be found since without a default "something" gets chosen for you:

You would need to debug qtcreator to find that.
I think the error message could be improved to show the actual path that is looked for and more importantly, I think when having a single ndk in the android settings this should become the default.