Android: Use lldb-server from the host lldb debugger path

We want to have the lldb-server, matching the target ABI, from the NDK
path from where we have the host lldb debugger.

The previous version would take into consideration the default NDK if
set, or the NDK version used to build Qt.

Fixes: QTCREATORBUG-32494
Change-Id: Ibd1b4898052641a58a145d85181ae366800b3616
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>